--- a/tutorial.html
+++ b/tutorial.html
@@ -105,7 +105,7 @@
 		<div id="isirdm">
 		<br/>
 		<h3>Video Cara Pengisian Rapor RDM untuk Guru RA</h3>
-		<div id='player-jw2' data-poster='assets/img/yt-thumb2.jpg' data-video='assets/video/isi-rdm-720.mp4' data-video2='assets/video/isi-rdm-360.mp4'>
+		<div id='player-jw2' data-poster='assets/img/yt-thumb2.jpg' data-video='https://kangismet.github.io/isirdm/isirdm.m3u8' data-video2='assets/video/isi-rdm-360.mp4'>
 		</div>
 		<br/>
 		<div id="cp">
@@ -265,5 +265,6 @@
   })(document);
 /*]]>*/</script>
 </body>
+
 
 </html>
