--- a/tutorial.html
+++ b/tutorial.html
@@ -105,7 +105,7 @@
 		<div id="isirdm">
 		<br/>
 		<h3>Video Cara Pengisian Rapor RDM untuk Guru RA</h3>
-		<div id='player-jw2' data-poster='assets/img/yt-thumb2.jpg' data-video='https://kangismet.github.io/isirdm/isirdm.m3u8' data-video2='assets/video/isi-rdm-360.mp4'>
+		<div id='player-jw2' data-poster='assets/img/yt-thumb2.jpg' data-video='https://d3v55qvjb2v012.cloudfront.net/CTb7/2025/12/29/18/17/cTlUFbnrVJi/sc.mp4?&Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiaHR0cHM6Ly9kM3Y1NXF2amIydjAxMi5jbG91ZGZyb250Lm5ldC9DVGI3LzIwMjUvMTIvMjkvMTgvMTcvY1RsVUZibnJWSmkvc2MubXA0PyIsIkNvbmRpdGlvbiI6eyJEYXRlTGVzc1RoYW4iOnsiQVdTOkVwb2NoVGltZSI6MTc2NzAzNDAxOX19fV19&Signature=H93QWUZIj0lLhxoFJwOO~rcjxRupvpQjaxjAhWcMJLwv9GGiQn-9U2srcPwXOPxChEcFBdhwyPka-NxciybF4SxZ1oduvUUpSJGx0RSkwDGNY0c2IaU4gTMA5sLeuVyXH3MbXuiZk7UeF08RQJVlxawweM-pvwJxW0PMxS9Pz2M_&Key-Pair-Id=APKAI4E2RN57D46ONMEQ' data-video2='assets/video/isi-rdm-360.mp4'>
 		</div>
 		<br/>
 		<div id="cp">
@@ -268,3 +268,4 @@
 
 
 </html>
+
