--- a/tutorial.html
+++ b/tutorial.html
@@ -3,14 +3,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Hosting RDM Raudhatul Athfal (RA)</title>
-  <meta content="Hosting RDM Raudhatul Athfal" name="description">
-  <meta content="hosting rdm, rdm, rdm ra" name="keywords">
+  <title>Tutorial RDM untuk RA</title>
+  <meta content="Tutorial RDM untuk RA" name="description">
+  <meta content="tutorial rdm, rdm, rdm ra" name="keywords">
 <!-- Open graph -->
-	<meta property="og:url" content="https://raudhatulathfal.web.id/contact" />
+	<meta property="og:url" content="https://raudhatulathfal.web.id/tutorial" />
 	<meta property="og:type" content="article" />
-	<meta property="og:title" content="Hosting RDM Raudhatul Athfal (RA)" />
-	<meta property="og:description" content="Hosting RDM Raudhatul Athfal Terbaik dan Termurah" />
+	<meta property="og:title" content="Tutorial RDM Raudhatul Athfal (RA)" />
+	<meta property="og:description" content="Tutorial cara menggunakan RDM untuk RA" />
 	<meta property="og:image" content="https://raudhatulathfal.web.id/assets/img/webthumb.jpg" />
 
   <!-- Favicons -->
@@ -27,6 +27,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/youtube.css" rel="stylesheet">
 	<script src='https://kangismet.github.io/public/jwplayer-8-8-2.js' type='text/javascript'></script>
 </head>
 
@@ -105,7 +106,8 @@
 		<div id="isirdm">
 		<br/>
 		<h3>Video Cara Pengisian Rapor RDM untuk Guru RA</h3>
-		<div id='player-jw2' data-poster='assets/img/yt-thumb2.jpg' data-video='https://d3v55qvjb2v012.cloudfront.net/CTb7/2025/12/29/18/17/cTlUFbnrVJi/sc.mp4?&Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiaHR0cHM6Ly9kM3Y1NXF2amIydjAxMi5jbG91ZGZyb250Lm5ldC9DVGI3LzIwMjUvMTIvMjkvMTgvMTcvY1RsVUZibnJWSmkvc2MubXA0PyIsIkNvbmRpdGlvbiI6eyJEYXRlTGVzc1RoYW4iOnsiQVdTOkVwb2NoVGltZSI6MTc2NzAzNDAxOX19fV19&Signature=H93QWUZIj0lLhxoFJwOO~rcjxRupvpQjaxjAhWcMJLwv9GGiQn-9U2srcPwXOPxChEcFBdhwyPka-NxciybF4SxZ1oduvUUpSJGx0RSkwDGNY0c2IaU4gTMA5sLeuVyXH3MbXuiZk7UeF08RQJVlxawweM-pvwJxW0PMxS9Pz2M_&Key-Pair-Id=APKAI4E2RN57D46ONMEQ' data-video2='assets/video/isi-rdm-360.mp4'>
+		<div id='player-jw2' data-poster='assets/img/yt-thumb2.jpg' data-video='https://cdn.jumpshare.com/preview/Evv6SY2oInSRZXiADRNufl0mlJnXp2Wg_ff1f73Zi-0UJHco3-80rqTucWk9o8oTU1UETtwSi6y5Kf8kb3eLiz66vVEMDfmTDZ-V5tZIPJLsU0NWbw7TjExziSQYs23rlXw_WHv6URinOwDa-Ev4QG6yjbN-I2pg_cnoHs_AmgI.mp4' data-video2='assets/video/isi-rdm-360.mp4'>
+
 		</div>
 		<br/>
 		<div id="cp">
@@ -264,8 +266,8 @@
     }
   })(document);
 /*]]>*/</script>
+
+
 </body>
 
-
 </html>
-
