--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Hosting RDM Raudhatul Athfal (RA)</title>
-  <meta content="Hosting RDM Raudhatul Athfal" name="description">
+  <title>Hubungi Kami</title>
+  <meta content="Hubungi Hosting RDM Raudhatul Athfal" name="description">
   <meta content="hosting rdm, rdm, rdm ra" name="keywords">
 <!-- Open graph -->
 	<meta property="og:url" content="https://raudhatulathfal.web.id/contact" />
 	<meta property="og:type" content="article" />
-	<meta property="og:title" content="Hosting RDM Raudhatul Athfal (RA)" />
+	<meta property="og:title" content="Hubungi Kami RDM Raudhatul Athfal" />
 	<meta property="og:description" content="Hosting RDM Raudhatul Athfal Terbaik dan Termurah" />
 	<meta property="og:image" content="https://raudhatulathfal.web.id/assets/img/webthumb.jpg" />
 
@@ -145,5 +145,6 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
