--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <p>Saat ini kami sudah mengelola puluhan RDM tingkat RA, dan ratusan RDM tingkat MI, MTs dan MA. <br/>Pihak Sekolah tidak perlu menyediakan sumber daya manusia untuk belajar/melakukan instalasi RDM. Kami akan membantu melakukan install aplikasi RDM versi terbaru. Anda cukup melakukan registrasi RDM menggunakan token.</p>
           <div class="mt-3">
 		  <a href="rdm.html" class="btn-get-started2 scrollto">Hosting RDM</a>
-		  <a href="arrohmah.raudhatulathfal.web.id" class="btn-get-started scrollto" target="_blank">Demo</a>
+		  <a href="http://arrohmah.raudhatulathfal.web.id" class="btn-get-started scrollto" target="_blank">Demo</a>
 		  <a href="tutorial.html" class="btn-get-started3 scrollto">Tutorial</a>
 		  </div>
 		</div>
@@ -206,4 +206,5 @@
 </body>
 
 </html>
+
 
