--- a/tutorial.html
+++ b/tutorial.html
@@ -106,7 +106,7 @@
 		<div id="isirdm">
 		<br/>
 		<h3>Video Cara Pengisian Rapor RDM untuk Guru RA</h3>
-		<div id='player-jw2' data-poster='assets/img/yt-thumb2.jpg' data-video='https://cdn.jumpshare.com/preview/Evv6SY2oInSRZXiADRNufl0mlJnXp2Wg_ff1f73Zi-0UJHco3-80rqTucWk9o8oTU1UETtwSi6y5Kf8kb3eLiz66vVEMDfmTDZ-V5tZIPJLsU0NWbw7TjExziSQYs23rlXw_WHv6URinOwDa-Ev4QG6yjbN-I2pg_cnoHs_AmgI.mp4' data-video2='assets/video/isi-rdm-360.mp4'>
+		<div id='player-jw2' data-poster='assets/img/yt-thumb2.jpg' data-video='isi-rdm-720.mp4' data-video2='assets/video/isi-rdm-360.mp4'>
 
 		</div>
 		<br/>
@@ -269,5 +269,6 @@
 
 
 </body>
+
 
 </html>
