--- a/arrohmah.html
+++ b/arrohmah.html
@@ -8,7 +8,7 @@
   <meta content="Rapor Digital Madrasah" name="description">
   <meta content="hosting rdm, rdm, rdm ra" name="keywords">
 <!-- Open graph -->
-	<meta property="og:url" content="https://raudhatulathfal.web.id/arrahmah" />
+	<meta property="og:url" content="https://raudhatulathfal.web.id/arrohmah" />
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="RDM RA AR ROHMAH" />
 	<meta property="og:description" content="RDM RA Arrohmah Bekasi Barat" />
@@ -25,4 +25,5 @@ window.location.replace("https://arrohmahbekbar.rdmku.id");
 </script>
 
 </body>
+
 </html>
