--- a/rdmkuid.html
+++ b/rdmkuid.html
@@ -13,7 +13,7 @@
 	<meta NAME="Rating" CONTENT="General">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Style -->
-	<link rel="shortcut icon" href="https://idwebhost.com/themes/freshblue/images/favicon.ico" />
+	<link rel="shortcut icon" href="assets/img/favicon.png" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 	<link rel="stylesheet" type="text/css" href="assets/css/rdmkuid.css">
 	<link rel="canonical" href="https://raudhatulathfal.web.id/rdmkuid" />
